<resources>
    <string name="app_name">SmartSchool</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_telephone">Telephone</string>
    <string name="button_save_employee">Save employee</string>
    <string name="button_login">Авторизация</string>
    <string name="filledBox_accName">Логин</string>
    <string name="textInput_password">Пароль</string>
    <string name="login_text">Авторизоваться</string>
    <string name="register_hint">Ещё не зарегистрировались?</string>
    <string name="button_createAcc">Создать аккаунт</string>
    <string name="registerText">Регистрация</string>
    <string name="fio">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Почта</string>
    <string name="passAgain">Подтвердите пароль</string>
    <string name="SignUp">Регистрация</string>
    <string name="text_haveAcc">Уже еcть аккаунт?</string>Что-то ищете?
    <string name="text_search">Что-то ищете?</string>
    <string name="deliver_text">Закажи,</string>
    <string name="pay_text">оплати,</string>
    <string name="take_text">забери!</string>
    <string name="categories">Категории</string>
    <string name="catalog">Каталог</string>
    <string name="profile">Профиль</string>
    <string name="cart">Корзина</string>
    <string name="other">Другое</string>
    <string name="Orders">>Заказы в буфете</string>
    <string name="ElderMail">>Заявки в столовую</string>
    <string name="add_to_cart">В корзину</string>
    <string name="addBtn">В корзину</string>
    <string name="Banknote">Br</string>
    <string name="my_cart_text">Моя корзина</string>
    <string name="items_total">Всего:</string>
    <string name="order_btn">Заказать</string>
    <string name="emptyCart">Корзина пуста.</string>
    <string name="schoolIdentifier">Ключ учреждения образования</string>
    <string name="InfoTitle">Инфо</string>
    <string name="CurrentOrdersTitle">Текущие заказы</string>
    <string name="cashAdd">Пополнить баланс: +10</string>
    <string name="orderNum">Номер заказа:</string>
    <string name="orderTime">Время заказа:</string>
    <string name="productsCount">Кол-во продуктов:</string>
    <string name="memberOrder">Заказ пользователя:</string>
    <string name="welcomeTxt">Добро пожаловать!</string>
    <string name="balanceTxt">Баланс:</string>
    <string name="currentRequests">Текущие заявки</string>
    <string name="requestTime">Время заявки:</string>
    <string name="freeStudentsCount">Кол-во бесплатников:</string>
    <string name="studentsCount">Кол-во питающихся:</string>
    <string name="enterStudentsCount">Введите число</string>
</resources>