<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollViewCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cart_text"
                android:textAlignment="center"
                android:textColor="#373b54"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/items_total"
                    android:textColor="#373b54"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0Br"
                    android:textAlignment="textEnd"
                    android:textColor="#373b54"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:textColor="#373b54"
                    android:text="@string/Banknote" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/orderBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/cart_button"
                android:gravity="center"
                android:text="@string/order_btn"
                android:textColor="#373b54"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyCart"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollViewCart"
        app:layout_constraintEnd_toEndOf="@id/scrollViewCart"
        app:layout_constraintStart_toStartOf="@+id/scrollViewCart"
        app:layout_constraintTop_toTopOf="@+id/scrollViewCart" />
</androidx.constraintlayout.widget.ConstraintLayout>