<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/textFieldLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
    android:gravity="center_horizontal"
    android:text="@string/button_login"
    android:textColor="@color/white"
    android:textSize="46sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.17000002" />


<com.google.android.material.textfield.TextInputLayout
    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
    android:id="@+id/textFieldEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="32dp"
    android:clipToPadding="false"
    android:hint="@string/email"
    app:hintTextColor="@color/button_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textFieldLogin">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/person_icon"
        android:background="@drawable/edittext_shape"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:padding="20dp"
        android:singleLine="true" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textFieldPassword"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="32dp"
    android:hint="@string/textInput_password"
    app:hintTextColor="@color/button_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
    app:passwordToggleContentDescription="description"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/password_icon"
        android:background="@drawable/edittext_shape"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:padding="20dp"
        android:singleLine="true" />

</com.google.android.material.textfield.TextInputLayout>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button_login"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:background="@drawable/button_login"
    android:text="@string/login_text"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
    app:layout_constraintVertical_bias="0.16000003"
    tools:ignore="TextContrastCheck,TextContrastCheck" />

<Button
    android:id="@+id/btnGoRegistr"
    style="@style/Widget.AppCompat.Button.Borderless.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:text="@string/button_createAcc"
    android:textColor="@color/button_login"
    android:textSize="13sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/button_login"
    app:layout_constraintStart_toStartOf="@+id/button_login"
    app:layout_constraintTop_toBottomOf="@+id/button_login"
    app:layout_constraintVertical_bias="0.37" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btnGoRegistr"
    android:gravity="center_horizontal"
    android:text="@string/register_hint"
    android:textColor="@color/white"
    app:layout_constraintBottom_toTopOf="@+id/btnGoRegistr"
    app:layout_constraintEnd_toEndOf="@+id/btnGoRegistr"
    app:layout_constraintStart_toStartOf="@+id/btnGoRegistr"
    app:layout_constraintTop_toBottomOf="@+id/button_login"
    app:layout_constraintVertical_bias="1.0">

</TextView>

</androidx.constraintlayout.widget.ConstraintLayout>