<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayOrder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/cart_background"
    android:elevation="3dp">

    <TextView
        android:id="@+id/classNameRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="name"
        android:textColor="#373b54"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentsCountRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="count"
        android:textColor="#373b54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/studentsCountRequestText"
        app:layout_constraintStart_toEndOf="@+id/studentsCountRequestText"
        app:layout_constraintTop_toTopOf="@+id/studentsCountRequestText" />

    <TextView
        android:id="@+id/studentsCountRequestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/studentsCount"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/classNameRequest"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/freeStudentsCountRequestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/freeStudentsCount"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/studentsCountRequestText"
        app:layout_constraintTop_toBottomOf="@+id/studentsCountRequestText" />

    <TextView
        android:id="@+id/freeStudentsCountRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="freeCount"
        android:textColor="#373b54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/freeStudentsCountRequestText"
        app:layout_constraintStart_toEndOf="@+id/freeStudentsCountRequestText"
        app:layout_constraintTop_toTopOf="@+id/freeStudentsCountRequestText" />

    <TextView
        android:id="@+id/requestTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/requestTime"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/freeStudentsCountRequestText"
        app:layout_constraintTop_toBottomOf="@+id/freeStudentsCountRequestText" />

    <TextView
        android:id="@+id/requestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="time"
        android:textColor="#373b54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/requestTimeText"
        app:layout_constraintStart_toEndOf="@+id/requestTimeText"
        app:layout_constraintTop_toTopOf="@+id/requestTimeText" />

</androidx.constraintlayout.widget.ConstraintLayout>